--- a/TryIt/Site.Master
+++ b/TryIt/Site.Master
@@ -18,15 +18,6 @@
                 </h1>
             </div>
             <div class="loginDisplay">
-                <asp:LoginView ID="HeadLoginView" runat="server" EnableViewState="false">
-                    <AnonymousTemplate>
-                        [ <a href="~/Account/Login.aspx" ID="HeadLoginStatus" runat="server">Log In</a> ]
-                    </AnonymousTemplate>
-                    <LoggedInTemplate>
-                        Welcome <span class="bold"><asp:LoginName ID="HeadLoginName" runat="server" /></span>!
-                        [ <asp:LoginStatus ID="HeadLoginStatus" runat="server" LogoutAction="Redirect" LogoutText="Log Out" LogoutPageUrl="~/"/> ]
-                    </LoggedInTemplate>
-                </asp:LoginView>
             </div>
             <div class="clear hideSkiplink">
                 <asp:Menu ID="NavigationMenu" runat="server" CssClass="menu" 
@@ -37,8 +28,13 @@
                             Value="Top10 Words"/>
                         <asp:MenuItem NavigateUrl="~/About.aspx" Text="Word Filter" 
                             Value="Word Filter"/>
-                        <asp:MenuItem NavigateUrl="reqdServices.svc" Text="Svc Location" 
-                            Value="Svc Location"></asp:MenuItem>
+                        <asp:MenuItem NavigateUrl="~/NewFocus.aspx" Text="News Focus" 
+                            Value="News Focus"></asp:MenuItem>
+                        <asp:MenuItem NavigateUrl="~/definition.aspx" Text="Word Definition" 
+                            Value="Word Definition"></asp:MenuItem>
+                        <asp:MenuItem Text="New Item" Value="New Item"></asp:MenuItem>
+                        <asp:MenuItem NavigateUrl="http://webstrar6.fulton.asu.edu/page5/reqdServices.svc" Text="Svc File" 
+                            Value="Svc File"></asp:MenuItem>
                     </Items>
                 </asp:Menu>
             </div>
